--- a/notebooks/experiments/exp000.ipynb
+++ b/notebooks/experiments/exp000.ipynb
@@ -6,18 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd /workspace"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import sys\n",
+    "sys.path.append(\"../../\")\n",
+    "\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "from src.logger import Logger\n",
+    "from src.util import read_parquet_from_csv\n",
     "\n",
     "from torch.nn.utils.rnn import pad_sequence\n",
     "import torch"
@@ -46,26 +41,6 @@
     "\n",
     "config = Config()\n",
     "logger = Logger(__name__)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_parquet_from_csv(filepath:Path, dirpath:Path) -> pd.DataFrame: \n",
-    "    name = filepath.name.split(\".\")[0]\n",
-    "    parquet_filepath = dirpath / f\"{name}.parquet\"\n",
-    "    if parquet_filepath.is_file():\n",
-    "        logger.info(\"load parquet file\")\n",
-    "        return pd.read_parquet(parquet_filepath)\n",
-    "    \n",
-    "    logger.info(\"load csv & convert to parquet\")\n",
-    "    df = pd.read_csv(filepath)\n",
-    "    df.to_parquet(parquet_filepath)\n",
-    "    return df\n",
-    "    "
    ]
   },
   {
@@ -141,7 +116,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "task1_df.head().reset_index(drop=True)"
+   ]
   },
   {
    "cell_type": "code",
