--- a/notebooks/experiments/exp000.ipynb
+++ b/notebooks/experiments/exp000.ipynb
@@ -19,8 +19,7 @@
     "from torch.nn.utils.rnn import pack_padded_sequence, pad_packed_sequence, pad_sequence\n",
     "from torch.utils.data import DataLoader, Dataset\n",
     "\n",
-    "from src.logger import Logger\n",
-    "from src.util import read_parquet_from_csv"
+    "from src.logger import Logger"
    ]
   },
   {
@@ -47,6 +46,34 @@
     "\n",
     "config = Config()\n",
     "logger = Logger(__name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sort_df(df):\n",
+    "    return (\n",
+    "        df.assign(nunique_uid=df[\"uid\"].map(df[\"uid\"].value_counts()))\n",
+    "        .sort_values([\"nunique_uid\", \"uid\", \"d\", \"t\"])\n",
+    "        .reset_index(drop=True)\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def read_parquet_from_csv(filepath: Path, dirpath: Path, overwrite=False) -> pd.DataFrame:\n",
+    "    name = filepath.name.split(\".\")[0]\n",
+    "    parquet_filepath = dirpath / f\"{name}.parquet\"\n",
+    "    if parquet_filepath.is_file() and (not overwrite):\n",
+    "        logger.info(\"load parquet file\")\n",
+    "        return pd.read_parquet(parquet_filepath)\n",
+    "\n",
+    "    logger.info(\"load csv & convert to parquet\")\n",
+    "    df = pd.read_csv(filepath)\n",
+    "    df = sort_df(df)\n",
+    "    df.to_parquet(parquet_filepath)\n",
+    "    return df"
    ]
   },
   {
