--- a/notebooks/experiments/exp000.ipynb
+++ b/notebooks/experiments/exp000.ipynb
@@ -9,17 +9,23 @@
     "import sys\n",
     "\n",
     "sys.path.append(\"../../\")\n",
+    "%cd /workspace/src\n",
     "\n",
-    "\n",
+    "import hashlib\n",
+    "from functools import cached_property, wraps\n",
     "from pathlib import Path\n",
+    "from typing import Callable\n",
     "\n",
+    "import joblib\n",
     "import pandas as pd\n",
     "import torch\n",
     "import torch.nn as nn\n",
+    "from custom.config_types import CONFIG_TYPES\n",
+    "from logger import Logger\n",
+    "from pytorch_pfn_extras.config import Config\n",
     "from torch.nn.utils.rnn import pack_padded_sequence, pad_packed_sequence, pad_sequence\n",
     "from torch.utils.data import DataLoader, Dataset\n",
-    "\n",
-    "from src.logger import Logger"
+    "from util import load_yaml, reduce_mem_usage, sort_df_numpy"
    ]
   },
   {
@@ -28,68 +34,137 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Config:\n",
-    "    debug = True\n",
-    "    seed = 8823"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "HOME = Path(\"/workspace\")\n",
-    "RESOURCES = HOME / \"resources\"\n",
-    "INPUT = RESOURCES / \"input\"\n",
+    "logger = Logger(name=\"\")\n",
+    "\n",
+    "# set config\n",
+    "pre_eval_config = load_yaml()\n",
+    "config = Config(pre_eval_config, types=CONFIG_TYPES)\n",
+    "\n",
+    "# set const\n",
+    "DEBUG = True\n",
     "\n",
     "\n",
-    "config = Config()\n",
-    "logger = Logger(__name__)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sort_df(df):\n",
-    "    return (\n",
-    "        df.assign(nunique_uid=df[\"uid\"].map(df[\"uid\"].value_counts()))\n",
-    "        .sort_values([\"nunique_uid\", \"uid\", \"d\", \"t\"])\n",
-    "        .reset_index(drop=True)\n",
-    "    )\n",
+    "class TaskDatset:\n",
+    "    def __init__(self, config) -> None:\n",
+    "        self.config = config\n",
+    "        self.dirpath = Path(config[\"/global/resources\"]) / \"input\"\n",
+    "        self.dataset_name = config[\"/fe/dataset\"]\n",
+    "\n",
+    "        self.raw_train_filepath = self.dirpath / f\"{self.dataset_name}_raw_train.parquet\"\n",
+    "        self.raw_test_filepath = self.dirpath / f\"{self.dataset_name}_raw_test.parquet\"\n",
+    "\n",
+    "    @property\n",
+    "    def raw_train_data(self):\n",
+    "        if self.raw_train_filepath.is_file():\n",
+    "            return pd.read_parquet(self.raw_train_filepath)\n",
+    "\n",
+    "        raw_train_df = self.raw_data.query(\"x != 999\").reset_index(drop=True)\n",
+    "        raw_train_df.to_parquet(self.raw_train_filepath)\n",
+    "        return raw_train_df\n",
+    "\n",
+    "    @property\n",
+    "    def raw_test_data(self):\n",
+    "        if self.raw_test_filepath.is_file():\n",
+    "            return pd.read_parquet(self.raw_test_filepath)\n",
+    "\n",
+    "        raw_test_df = self.raw_data.query(\"x == 999\")\n",
+    "        raw_test_df.to_parquet(self.raw_test_filepath).reset_index(drop=True)\n",
+    "        return raw_test_df\n",
+    "\n",
+    "    @cached_property\n",
+    "    def raw_data(self):\n",
+    "        return read_parquet_from_csv(\n",
+    "            filepath=self.dirpath / f\"{self.dataset_name}.csv.gz\",\n",
+    "            dirpath=self.dirpath,\n",
+    "            process_fns=[reduce_mem_usage, sort_df_numpy],\n",
+    "            overwrite=self.config[\"/fe/overwrite\"],\n",
+    "        )\n",
+    "\n",
+    "    @property\n",
+    "    def poi_data(self):\n",
+    "        return read_parquet_from_csv(\n",
+    "            filepath=self.dirpath / \"cell_POIcat.csv.gz\", dirpath=self.dirpath\n",
+    "        )\n",
     "\n",
     "\n",
-    "def read_parquet_from_csv(filepath: Path, dirpath: Path, overwrite=False) -> pd.DataFrame:\n",
+    "def read_parquet_from_csv(\n",
+    "    filepath: Path,\n",
+    "    dirpath: Path,\n",
+    "    process_fns: list[Callable] | None = None,\n",
+    "    overwrite: bool = False,\n",
+    ") -> pd.DataFrame:\n",
     "    name = filepath.name.split(\".\")[0]\n",
     "    parquet_filepath = dirpath / f\"{name}.parquet\"\n",
     "    if parquet_filepath.is_file() and (not overwrite):\n",
-    "        logger.info(\"load parquet file\")\n",
+    "        logger.info(f\"load parquet file ({str(filepath)})\")\n",
     "        return pd.read_parquet(parquet_filepath)\n",
     "\n",
-    "    logger.info(\"load csv & convert to parquet\")\n",
+    "    logger.info(f\"load csv & convert to parquet ({str(filepath)})\")\n",
     "    df = pd.read_csv(filepath)\n",
-    "    df = sort_df(df)\n",
+    "\n",
+    "    if process_fns is not None:\n",
+    "        for fn in process_fns:\n",
+    "            logger.info(f\"excute {fn.__name__}\")\n",
+    "            df = fn(df)\n",
+    "\n",
     "    df.to_parquet(parquet_filepath)\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raw_train_df = read_parquet_from_csv(filepath=INPUT / \"task1_dataset.csv.gz\", dirpath=INPUT)\n",
-    "poi_df = read_parquet_from_csv(filepath=INPUT / \"cell_POIcat.csv.gz\", dirpath=INPUT)\n",
+    "    return df\n",
     "\n",
     "\n",
-    "if config.debug:\n",
-    "    user_ids = raw_train_df[\"uid\"].sample(100, random_state=config.seed).tolist()\n",
+    "def cache(out_dir: Path, overwrite: bool = False, no_cache: bool = False):\n",
+    "    out_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    def decorator(func):\n",
+    "        @wraps(func)\n",
+    "        def wrapper(*args, **kwargs):\n",
+    "            if no_cache:\n",
+    "                return func(*args, **kwargs)\n",
+    "\n",
+    "            extractor = args[1]\n",
+    "\n",
+    "            extractor_name = extractor.__class__.__name__\n",
+    "            hash_input = extractor_name + str(extractor.__dict__)\n",
+    "\n",
+    "            # use hash\n",
+    "            extractor_id = hashlib.sha256(hash_input.encode()).hexdigest()\n",
+    "            filename = f\"{extractor_name}_{extractor_id}\"\n",
+    "            cache_file = out_dir / f\"{filename}.pkl\"\n",
+    "\n",
+    "            if cache_file.exists() and not overwrite:\n",
+    "                logger.debug(f\"use cache : {filename}\")\n",
+    "                result = joblib.load(cache_file)\n",
+    "            else:\n",
+    "                result = func(*args, **kwargs)\n",
+    "                joblib.dump(result, cache_file)\n",
+    "            return result\n",
+    "\n",
+    "        return wrapper\n",
+    "\n",
+    "    return decorator\n",
+    "\n",
+    "\n",
+    "def make_features(config, df):\n",
+    "    extractors = config[\"fe/extractors\"]\n",
+    "    out_dir = Path(config[\"/global/resources\"]) / \"output\" / config[\"fe/out_dir\"]\n",
+    "\n",
+    "    @cache(out_dir=out_dir, overwrite=config[\"/fe/overwrite\"], no_cache=True)\n",
+    "    def _extract(df, extractor):\n",
+    "        with logger.time_log(target=extractor.__class__.__name__):\n",
+    "            return extractor(df)\n",
+    "\n",
+    "    features_df = pd.concat([df] + [_extract(df, extractor) for extractor in extractors], axis=1)\n",
+    "    return features_df\n",
+    "\n",
+    "\n",
+    "# load data\n",
+    "task_dataset = TaskDatset(config=config)\n",
+    "raw_train_df = task_dataset.raw_train_data\n",
+    "poi_df = task_dataset.poi_data\n",
+    "\n",
+    "if DEBUG:\n",
+    "    user_ids = raw_train_df[\"uid\"].sample(100, random_state=config[\"/global/seed\"]).tolist()\n",
     "    raw_train_df = raw_train_df[raw_train_df[\"uid\"].isin(user_ids)].reset_index(drop=True)\n",
-    "\n",
+    "    print(\"OK\")\n",
     "raw_train_df.head()"
    ]
   },
@@ -99,55 +174,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class GroupedDiffFeatureExtractor:\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        group_key: str = \"uid\",\n",
-    "        group_values: list[str] = [\"t\", \"d\"],\n",
-    "        intervals: list[int] = [1, 2],\n",
-    "    ):\n",
-    "        self.group_key = group_key\n",
-    "        self.group_values = group_values\n",
-    "        self.intervals = intervals\n",
-    "\n",
-    "    def __call__(self, df):\n",
-    "        cols = [\n",
-    "            {v: f\"{v}_grpby_{self.group_key}_diff_{interval}\" for v in self.group_values}\n",
-    "            for interval in self.intervals\n",
-    "        ]\n",
-    "        out_df = pd.concat(\n",
-    "            [\n",
-    "                df.groupby(self.group_key)[self.group_values].diff(interval).rename(columns=col)\n",
-    "                for interval, col in zip(self.intervals, cols)\n",
-    "            ],\n",
-    "            axis=1,\n",
-    "        )\n",
-    "        return out_df.add_prefix(\"f_\").fillna(-1)\n",
-    "\n",
-    "\n",
-    "def sort_df(df):\n",
-    "    return (\n",
-    "        df.assign(nunique_uid=df[\"uid\"].map(df[\"uid\"].value_counts()))\n",
-    "        .sort_values([\"nunique_uid\", \"uid\", \"d\", \"t\"])\n",
-    "        .reset_index(drop=True)\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def make_features(df):\n",
-    "    df = sort_df(df)\n",
-    "    funcs = [\n",
-    "        GroupedDiffFeatureExtractor(\n",
-    "            group_key=\"uid\",\n",
-    "            group_values=[\"t\", \"d\"],\n",
-    "            intervals=[1, 2],\n",
-    "        )\n",
-    "    ]\n",
-    "    features_df = pd.concat([df] + [func(df) for func in funcs], axis=1)\n",
-    "    return features_df\n",
-    "\n",
-    "\n",
-    "train_df = make_features(raw_train_df)\n",
-    "train_df.head()"
+    "# feature engineering\n",
+    "train_df = make_features(config=config, df=raw_train_df)\n",
+    "print(train_df.shape, train_df[\"uid\"].nunique())\n",
+    "print(\"OK\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid_uids = pd.Series(raw_train_df[\"uid\"].unique()).sample(20, random_state=0).tolist()\n",
+    "valid_df = train_df[train_df[\"uid\"].isin(valid_uids)].reset_index(drop=True)\n",
+    "train_df = train_df[~train_df[\"uid\"].isin(valid_uids)].reset_index(drop=True)\n",
+    "print(train_df[\"uid\"].nunique())"
    ]
   },
   {
@@ -366,6 +408,101 @@
    "outputs": [],
    "source": [
     "print(outputs[0].shape, len(outputs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "\n",
+    "def sequential_prediction(model, initial_features, steps_to_predict):\n",
+    "    # 入力特徴量のサイズ取得\n",
+    "    batch_size, seq_length, feature_dim = initial_features.size()\n",
+    "    # LSTMの隠れ状態とセル状態を初期化\n",
+    "    hidden_state = torch.zeros(model.num_layers, batch_size, model.hidden_dim).to(\n",
+    "        initial_features.device\n",
+    "    )\n",
+    "    cell_state = torch.zeros(model.num_layers, batch_size, model.hidden_dim).to(\n",
+    "        initial_features.device\n",
+    "    )\n",
+    "    # 初回の特徴量を設定\n",
+    "    current_features = initial_features\n",
+    "    predictions = []\n",
+    "\n",
+    "    # 逐次的に予測を行う\n",
+    "    for step in range(steps_to_predict):\n",
+    "        # 前回の隠れ状態とセル状態を使用して、LSTMから出力を取得\n",
+    "        output, (hidden_state, cell_state) = model.lstm(\n",
+    "            current_features, (hidden_state, cell_state)\n",
+    "        )\n",
+    "        # 最後の時間ステップの出力を取得して予測に変換\n",
+    "        prediction = model.fc(output[:, -1, :])\n",
+    "        predictions.append(prediction)\n",
+    "\n",
+    "        # 新しい特徴量を作成 (例: 最後の予測値を特徴量として追加)\n",
+    "        # 必要に応じて、新しい特徴量の形状を調整\n",
+    "        new_feature = prediction.view(batch_size, 1, -1)\n",
+    "        current_features = torch.cat((current_features[:, 1:, :], new_feature), dim=1)\n",
+    "\n",
+    "    # 予測結果をテンソルに変換\n",
+    "    predictions = torch.stack(predictions, dim=1)\n",
+    "    return predictions\n",
+    "\n",
+    "\n",
+    "# データの準備 (仮想のデータセット)\n",
+    "train_features = torch.randn(100, 10, 5)  # 100サンプル, 10時間ステップ, 5特徴量\n",
+    "train_targets = torch.randn(100, 10, 1)  # 100サンプル, 10時間ステップ, 1出力\n",
+    "train_dataset = torch.utils.data.TensorDataset(train_features, train_targets)\n",
+    "train_loader = DataLoader(train_dataset, batch_size=32)\n",
+    "\n",
+    "# モデルの定義\n",
+    "input_dim = 5\n",
+    "hidden_dim = 20\n",
+    "num_layers = 2\n",
+    "output_dim = 5\n",
+    "model = CustomLSTMModel(input_dim, hidden_dim, num_layers, output_dim)\n",
+    "\n",
+    "# 逐次的予測\n",
+    "initial_features = train_features[0:1]  # 1サンプル, t0 ~ t10の特徴量\n",
+    "steps_to_predict = 10\n",
+    "predictions = sequential_prediction(model, initial_features, steps_to_predict)\n",
+    "print(\"Sequential predictions:\", predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df = raw_train_df.query(f\"x == 999\")\n",
+    "test_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df_ = raw_train_df.query(f\"x != 999\")\n",
+    "train_df_[\"d\"].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df_ = raw_train_df.query(f\"x != 999\")\n",
+    "valid_df"
    ]
   },
   {
