--- a/notebooks/experiments/exp000.ipynb
+++ b/notebooks/experiments/exp000.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/workspace/src\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "\n",
@@ -17,6 +25,7 @@
     "from typing import Callable\n",
     "\n",
     "import joblib\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -30,22 +39,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "logger = Logger(name=\"\")\n",
+    "logger = Logger(name=\"fe\")\n",
     "\n",
     "# set config\n",
     "pre_eval_config = load_yaml()\n",
     "config = Config(pre_eval_config, types=CONFIG_TYPES)\n",
     "\n",
     "# set const\n",
-    "DEBUG = True\n",
-    "\n",
-    "\n",
+    "DEBUG = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2023-08-05 21:57:08] \u001b[32m[fe] [INFO] - load parquet file (/workspace/resources/input/task2_dataset.csv.gz)\u001b[0m\n",
+      "[2023-08-05 21:57:14] \u001b[32m[fe] [INFO] - load parquet file (/workspace/resources/input/cell_POIcat.csv.gz)\u001b[0m\n",
+      "[2023-08-05 21:57:15] \u001b[32m[fe] [INFO] - start GroupedDiffFeatureExtractor 🚀\u001b[0m\n",
+      "[2023-08-05 21:57:15] \u001b[32m[fe] [INFO] - end GroupedDiffFeatureExtractor ✨ - elapsed time: 0.02 seconds ⏰\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
     "class TaskDatset:\n",
-    "    def __init__(self, config) -> None:\n",
+    "    def __init__(self, config, overwrite=False) -> None:\n",
     "        self.config = config\n",
     "        self.dirpath = Path(config[\"/global/resources\"]) / \"input\"\n",
     "        self.dataset_name = config[\"/fe/dataset\"]\n",
@@ -53,9 +79,11 @@
     "        self.raw_train_filepath = self.dirpath / f\"{self.dataset_name}_raw_train.parquet\"\n",
     "        self.raw_test_filepath = self.dirpath / f\"{self.dataset_name}_raw_test.parquet\"\n",
     "\n",
+    "        self.overwrite = overwrite\n",
+    "\n",
     "    @property\n",
     "    def raw_train_data(self):\n",
-    "        if self.raw_train_filepath.is_file():\n",
+    "        if self.raw_train_filepath.is_file() and (not self.overwrite):\n",
     "            return pd.read_parquet(self.raw_train_filepath)\n",
     "\n",
     "        raw_train_df = self.raw_data.query(\"x != 999\").reset_index(drop=True)\n",
@@ -64,7 +92,7 @@
     "\n",
     "    @property\n",
     "    def raw_test_data(self):\n",
-    "        if self.raw_test_filepath.is_file():\n",
+    "        if self.raw_test_filepath.is_file() and (not self.overwrite):\n",
     "            return pd.read_parquet(self.raw_test_filepath)\n",
     "\n",
     "        raw_test_df = self.raw_data.query(\"x == 999\")\n",
@@ -143,11 +171,11 @@
     "    return decorator\n",
     "\n",
     "\n",
-    "def make_features(config, df):\n",
+    "def make_features(config, df, overwrite=False):\n",
     "    extractors = config[\"fe/extractors\"]\n",
     "    out_dir = Path(config[\"/global/resources\"]) / \"output\" / config[\"fe/out_dir\"]\n",
     "\n",
-    "    @cache(out_dir=out_dir, overwrite=config[\"/fe/overwrite\"], no_cache=True)\n",
+    "    @cache(out_dir=out_dir, overwrite=overwrite, no_cache=True)\n",
     "    def _extract(df, extractor):\n",
     "        with logger.time_log(target=extractor.__class__.__name__):\n",
     "            return extractor(df)\n",
@@ -156,45 +184,61 @@
     "    return features_df\n",
     "\n",
     "\n",
+    "class TrainValidDataset:\n",
+    "    def __init__(self, config, uids, overwrite=True):\n",
+    "        self.config = config\n",
+    "        out_dir = Path(config[\"/global/resources\"]) / \"output\" / config[\"fe/out_dir\"]\n",
+    "        self.train_filepath = out_dir / \"train_feaures_df.pkl\"\n",
+    "        self.valid_filepath = out_dir / \"valid_features_df.pkl\"\n",
+    "\n",
+    "        self.uids = uids\n",
+    "        self.overwrite = overwrite\n",
+    "\n",
+    "    @cached_property\n",
+    "    def valid_uids(self):\n",
+    "        valid_uids = (\n",
+    "            pd.Series(np.unique(self.uids))\n",
+    "            .sample(self.config[\"/cv/n_valid_uids\"], random_state=self.config[\"/global/seed\"])\n",
+    "            .tolist()\n",
+    "        )\n",
+    "        return valid_uids\n",
+    "\n",
+    "    def load_valid_data(self, df):\n",
+    "        if self.valid_filepath.is_file() and (not self.overwrite):\n",
+    "            return joblib.load(self.train_filepath)\n",
+    "\n",
+    "        valid_df = df[df[\"uid\"].isin(self.valid_uids)].reset_index(drop=True)\n",
+    "        joblib.dump(valid_df, self.valid_filepath)\n",
+    "        return valid_df\n",
+    "\n",
+    "    def load_train_data(self, df):\n",
+    "        if self.train_filepath.is_file() and (not self.overwrite):\n",
+    "            return joblib.load(self.train_filepath)\n",
+    "\n",
+    "        train_df = df[~df[\"uid\"].isin(self.valid_uids)].reset_index(drop=True)\n",
+    "        joblib.dump(train_df, self.train_filepath)\n",
+    "        return train_df\n",
+    "\n",
+    "\n",
     "# load data\n",
-    "task_dataset = TaskDatset(config=config)\n",
+    "task_dataset = TaskDatset(config=config, overwrite=True)\n",
     "raw_train_df = task_dataset.raw_train_data\n",
     "poi_df = task_dataset.poi_data\n",
     "\n",
     "if DEBUG:\n",
     "    user_ids = raw_train_df[\"uid\"].sample(100, random_state=config[\"/global/seed\"]).tolist()\n",
     "    raw_train_df = raw_train_df[raw_train_df[\"uid\"].isin(user_ids)].reset_index(drop=True)\n",
-    "    print(\"OK\")\n",
-    "raw_train_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "# feature engineering\n",
-    "train_df = make_features(config=config, df=raw_train_df)\n",
-    "print(train_df.shape, train_df[\"uid\"].nunique())\n",
-    "print(\"OK\")"
+    "train_df = make_features(config=config, df=raw_train_df, overwrite=True)\n",
+    "train_valid_dataset = TrainValidDataset(config=config, uids=train_df[\"uid\"], overwrite=True)\n",
+    "valid_df = train_valid_dataset.load_valid_data(df=train_df)\n",
+    "train_df = train_valid_dataset.load_train_data(df=train_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "valid_uids = pd.Series(raw_train_df[\"uid\"].unique()).sample(20, random_state=0).tolist()\n",
-    "valid_df = train_df[train_df[\"uid\"].isin(valid_uids)].reset_index(drop=True)\n",
-    "train_df = train_df[~train_df[\"uid\"].isin(valid_uids)].reset_index(drop=True)\n",
-    "print(train_df[\"uid\"].nunique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,14 +310,7 @@
     "            \"feature_seqs\": feature_seqs_padded,\n",
     "            \"target_seqs\": target_seqs_padded,\n",
     "            \"lengths\": lengths,\n",
-    "        }\n",
-    "\n",
-    "\n",
-    "ds = TrainDataset(feature_seqs=feature_seqs, target_seqs=target_seqs)\n",
-    "dl = DataLoader(ds, batch_size=10, collate_fn=CustomCollate(is_train_mode=True), shuffle=False)\n",
-    "\n",
-    "for x in dl:\n",
-    "    print(x[\"lengths\"], [len(x_) for x_ in x[\"feature_seqs\"]], [len(x_) for x_ in x[\"target_seqs\"]])"
+    "        }"
    ]
   },
   {
@@ -282,42 +319,132 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class CustomLSTMModel(nn.Module):\n",
-    "    def __init__(self, input_dim, hidden_dim, num_layers, output_dim):\n",
+    "class CustomLSTMModelV1(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, num_layers, output_size):\n",
     "        super().__init__()\n",
     "\n",
-    "        self.hidden_dim = hidden_dim\n",
+    "        self.hidden_size = hidden_size\n",
     "        self.num_layers = num_layers\n",
     "\n",
-    "        self.lstm = nn.LSTM(input_dim, hidden_dim, num_layers, batch_first=True)\n",
-    "        self.fc = nn.Linear(hidden_dim, output_dim)\n",
+    "        self.lstm = nn.LSTM(input_size, hidden_size, num_layers, batch_first=True)\n",
+    "        self.fc = nn.Linear(hidden_size, output_size)\n",
     "\n",
-    "    def forward(self, x):\n",
-    "        packed_out, _ = self.lstm(x)\n",
-    "        out, _ = pad_packed_sequence(packed_out, batch_first=True)  # to fixed length\n",
-    "        out = self.fc(out)\n",
-    "        return out\n",
-    "\n",
-    "\n",
-    "def noopt_train_loop(model, dataloader, criterion, device):\n",
-    "    total_loss = 0\n",
-    "    for batch in dataloader:\n",
-    "        feature_seqs = batch[\"feature_seqs\"].to(device)\n",
-    "        target_seqs = batch[\"target_seqs\"].to(device)\n",
-    "        lengths = batch[\"lengths\"]\n",
-    "\n",
-    "        # packing : remove padding\n",
-    "        packed_feature_seqs = pack_padded_sequence(\n",
-    "            feature_seqs,\n",
-    "            lengths,\n",
+    "    def forward(self, batch):\n",
+    "        # to variable length\n",
+    "        x = pack_padded_sequence(\n",
+    "            batch[\"feature_seqs\"],\n",
+    "            batch[\"lengths\"],\n",
     "            batch_first=True,\n",
     "            enforce_sorted=False,\n",
     "        )\n",
-    "        output = model(packed_feature_seqs)\n",
-    "        loss = criterion(output, target_seqs)\n",
-    "        total_loss += loss.item()\n",
+    "        packed_out, _ = self.lstm(x)\n",
+    "        out, _ = pad_packed_sequence(packed_out, batch_first=True)  # to fixible length\n",
+    "        out = self.fc(out)\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_fn(\n",
+    "    config,\n",
+    "    model,\n",
+    "    dataloader,\n",
+    "    criterion,\n",
+    "    optimizer,\n",
+    "    scheduler,\n",
+    "    device,\n",
+    "    wandb_logger,\n",
+    "    _custom_step,\n",
+    "):\n",
+    "    model.train()\n",
+    "    scaler = torch.cuda.amp.GradScaler()\n",
+    "    losses = []\n",
     "\n",
-    "    return total_loss / len(dataloader)"
+    "    tbar = tqdm(enumerate(dataloader), total=len(dataloader))\n",
+    "    for step, batch in tbar:\n",
+    "        for k, v in batch.items():\n",
+    "            batch[k] = v.to(device)\n",
+    "        targets = batch[\"targets\"]\n",
+    "        batch_size = targets.size(0)\n",
+    "\n",
+    "        with torch.cuda.amp.autocast():\n",
+    "            batch_outputs = model(batch)\n",
+    "            loss = criterion(batch_outputs, targets)\n",
+    "\n",
+    "        if config.gradient_accumulation_steps > 1:\n",
+    "            loss = loss / config.gradient_accumulation_steps\n",
+    "\n",
+    "        scaler.scale(loss).backward()\n",
+    "        if config.clip_grad_norm is not None:\n",
+    "            torch.nn.utils.clip_grad_norm_(model.parameters(), config.clip_grad_norm)\n",
+    "\n",
+    "        if (step + 1) % config.gradient_accumulation_steps == 0:\n",
+    "            scaler.step(optimizer)\n",
+    "            scaler.update()\n",
+    "            optimizer.zero_grad()\n",
+    "            _custom_step += 1\n",
+    "\n",
+    "            if config.batch_scheduler:\n",
+    "                scheduler.step()\n",
+    "\n",
+    "        wandb_logger.log(\n",
+    "            {\"train_loss\": loss, \"lr\": scheduler.get_lr()[0], \"train_step\": _custom_step}\n",
+    "        )\n",
+    "\n",
+    "        losses.append(float(loss))\n",
+    "        tbar.set_description(f\"loss: {np.mean(losses):.4f} lr: {scheduler.get_lr()[0]:.6f}\")\n",
+    "\n",
+    "    loss = np.mean(losses)\n",
+    "    return loss, _custom_step\n",
+    "\n",
+    "\n",
+    "def valid_fn(\n",
+    "    config,\n",
+    "    model,\n",
+    "    dataloader,\n",
+    "    criterion,\n",
+    "    device,\n",
+    "    wandb_logger,\n",
+    "    _custom_step,\n",
+    "):\n",
+    "    model.eval()\n",
+    "    outputs, targets = [], []\n",
+    "    losses = []\n",
+    "\n",
+    "    tbar = tqdm(enumerate(dataloader), total=len(dataloader))\n",
+    "    for step, batch in tbar:\n",
+    "        targets.append(batch[\"targets\"])\n",
+    "\n",
+    "        for k, v in batch.items():\n",
+    "            batch[k] = v.to(device)\n",
+    "\n",
+    "        batch_size = batch[\"targets\"].size(0)\n",
+    "        with torch.no_grad():\n",
+    "            batch_outputs = model(batch[\"images\"], labels=batch[\"targets\"])\n",
+    "            loss = criterion(batch_outputs, batch[\"targets\"])\n",
+    "\n",
+    "        if config.gradient_accumulation_steps > 1:\n",
+    "            loss = loss / config.gradient_accumulation_steps\n",
+    "\n",
+    "        batch_outputs = torch.softmax(batch_outputs, dim=1)  # to proba\n",
+    "        batch_outputs = batch_outputs.to(\"cpu\").numpy()\n",
+    "        outputs.append(batch_outputs)\n",
+    "\n",
+    "        wandb_logger.log({\"valid_loss\": loss, \"valid_step\": _custom_step})\n",
+    "        _custom_step += 1\n",
+    "        losses.append(float(loss))\n",
+    "\n",
+    "        tbar.set_description(f\"loss: {np.mean(losses):.4f}\")\n",
+    "\n",
+    "    outputs = np.concatenate(outputs)\n",
+    "    targets = np.concatenate(targets)\n",
+    "\n",
+    "    loss = np.mean(losses)\n",
+    "    return (loss, outputs, targets, _custom_step)"
    ]
   },
   {
